# EGDKProject

./: CMakeLists.txt  LICENSE  README.md  build.sh
Engine/Source/Components/: AnimateSpriteComponent.c  AnimateSpriteComponent.h  DamageComponent.c  DamageComponent.h  InfoComponent.c  InfoComponent.h  SpriteRendererComponent.c  SpriteRendererComponent.h  TransformComponent.h  component.base.h  components.h  info.h  transform.h
Engine/Source/Editor/: CMakeLists.txt  custom-imgui.c  custom-imgui.h  editor.c  editor.h  imgui.c  imgui.h  main.c  panel_assets.c  panel_hierarchy.c  panel_inspector.c  panel_viewport.c
Engine/Source/Editor/src/: custom-imgui.c  custom-imgui.h  editor-internal.c  editor-internal.h  editor.c  editor_data.c  editor_data.h  main.c  panel_assets.c  panel_hierarchy.c  panel_inspector.c  panel_viewport.c  ui_docked_browser.c  ui_docked_browser.h  ui_docked_hierarchy.c  ui_docked_hierarchy.h  ui_docked_inspector.c  ui_docked_inspector.h  ui_editor_main.c  ui_editor_main.h  ui_editor_menubar.c  ui_editor_menubar.h
Engine/Source/Ermine/: CMakeLists.txt  component.base.c  component.base.h  component.info.c  component.info.h  component.sprites.c  component.sprites.h  component.transform.c  component.transform.h  eactor.c  eactor.h  eanimate.c  ecolor.c  eflecs.c  eflecs.h  einput.c  einput.h  erender.c  eresource.c  ermine-assets-manager.c  ermine-assets-manager.h  ermine-flower.c  ermine-flower.h  ermine-math.c  ermine-resource.c  ermine-resource.h  ermine-scene.c  ermine-scene.h  ermine-shape.c  ermine-string.h  ermine-texture.c  ermine-window.c  ermine.h  escripts.c  eshape.c  esprite.c  etexture.c  eutil.c  ewindow.c  flower.c  (+1 more)
Engine/Source/Ermine/include/: ermine-assets-manager.h  ermine-c-background.h  ermine-camera.h  ermine-cbaseinfo.h  ermine-ccolor.h  ermine-cmath.h  ermine-config.h  ermine-core.h  ermine-crenderer.h  ermine-cshapes.h  ermine-ctexture.h  ermine-ctransform.h  ermine-dialog.h  ermine-ecs.h  ermine-file.h  ermine-flower.h  ermine-gfx-renderer.h  ermine-hash.h  ermine-input.h  ermine-math.h  ermine-path.h  ermine-renderer.h  ermine-resource.h  ermine-scene.h  ermine-string.h  ermine-transform.h  ermine-types.h  ermine-ui.h  ermine-util.h  ermine-window.h  ermine.h
Engine/Source/Ermine/include/Components/: AnimateSpriteComponent.h  DamageComponent.h  InfoComponent.h  SpriteRendererComponent.h  TransformComponent.h  base.h  component.base.h
Engine/Source/Ermine/src/: ermine-assets-manager.c  ermine-assets-manager.h  ermine-c-background.c  ermine-camera.c  ermine-cbaseinfo.c  ermine-ccolor.c  ermine-cmath.c  ermine-config.h  ermine-core.c  ermine-crenderer.c  ermine-cshapes.c  ermine-ctexture.c  ermine-ctransform.c  ermine-dialog.c  ermine-ecs.c  ermine-file.c  ermine-flower.c  ermine-flower.h  ermine-gfx-renderer.c  ermine-hash.c  ermine-input.c  ermine-input.h  ermine-math.c  ermine-path.c  ermine-render.c  ermine-renderer.c  ermine-renderer.h  ermine-resource.c  ermine-resource.h  ermine-scene.c  ermine-scene.h  ermine-string.c  ermine-string.h  ermine-transform.c  ermine-types.c  ermine-ui.c  ermine-util.c  ermine-window.c  ermine.h
Engine/Source/Ermine/src/Components/: AnimateSpriteComponent.c  AnimateSpriteComponent.h  DamageComponent.c  DamageComponent.h  InfoComponent.c  InfoComponent.h  SpriteRendererComponent.c  SpriteRendererComponent.h  TransformComponent.c  TransformComponent.h  base.h  component.base.c  component.base.h
Engine/Source/Game/: CMakeLists.txt
Engine/Source/Game/src/: main.c
Examples/Metro/resource/: level-main.json
Examples/TappyPlane/components/: PlanePlayer.c  PlanePlayer.h
Examples/TappyPlane/resource/: assets.json  c1332.json  c1475.json  r4417.scene  r5893.level  r5893.scene  r7955.scene
b/: CMakeCache.txt  Makefile  cmake_install.cmake  user_data.json
build_l/: CMakeCache.txt  Makefile  cmake_install.cmake
build_w/: CMakeCache.txt  Makefile  cmake_install.cmake
imagenes/: icons.xcf  version_27032022.xcf  view_icon.xcf
resource/: resource.json
